--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: depcontainer
-          image: httpd
+          image: nginx:latest
           ports:
            - containerPort: 80
   
